fix: footer cta each element gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,7 +598,7 @@
 
 .saaspricing-main .saaspricing-table .saaspricing-footer-cta {
     vertical-align: top;
-    padding: 10px 0 40px 0;
+    padding: 10px 20px 40px 0;
 }
 
 .saaspricing-xsm-btn {
